Reader: feat add user dictionary overrides
